# sedsprintf_2026

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.py  build.rs  build.sh  cbindgen.toml  config.toml  pyproject.toml  submodule_update.py  submodule_update_no_stash.py  subtree_update.py  subtree_update_no_stash.py  telemetry_config.ipc.test.json  telemetry_config.json  telemetry_config.test.json  telemetry_config_editor.py  update_subtree.py  update_subtree.sh  update_subtree_no_stash.py  update_subtree_no_stash.sh
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml
C-Headers/: sedsprintf.h
benches/: packet_paths.rs  router_system_paths.rs
c-example-code/: CMakeLists.txt
c-example-code/include/: telemetry.h
c-example-code/src/: main.c  telemetry.c  timesync_example.c
c-system-test/: CMakeLists.txt
c-system-test/include/: telemetry.h  telemetry_sim.h
c-system-test/src/: board_topology_timesync_test.c  main.c  telemetry_sim.c  timesync_multinode_test.c
c-system-test/tests/: test_bus.c
c-test/: CMakeLists.txt  main.c
docs/: README.md  sync_wiki.py
docs/wiki/: Architecture.md  Build-and-Configure.md  Changelogs.md  Concepts.md  Examples.md  Home.md  Overview.md  Technical-Architecture.md  Technical-Bindings-and-FFI.md  Technical-Index.md  Technical-Packet-Details.md  Technical-Queues-and-Memory.md  Technical-Router-Details.md  Technical-Telemetry-Schema.md  Technical-TelemetryPacket-Details.md  Technical-Wire-Format.md  Telemetry-Schema.md  Testing.md  Time-Sync.md  Troubleshooting.md  Usage-C-Cpp.md  Usage-Python.md  Usage-Rust.md
docs/wiki/technical/: Architecture.md  Bindings-and-FFI.md  Index.md  Queues-and-Memory.md  Router-Details.md  Telemetry-Schema.md  TelemetryPacket-Details.md  Wire-Format.md
header_templates/: sedsprintf.h.txt  sedsprintf_rs.pyi.txt
python-example/: main.py  timesync_example.py
python-files/: sedsprintf_rs.pyi
python-files/sedsprintf_rs/: __init__.py
python-files/sedsprintf_rs_2026/: __init__.py
rtos-example-code/: freertos_timesync.c  threadx_telemetry.c  threadx_timesync.c
rust-example-code/: README.md  multinode_sim_example.rs  queue_timeout_example.rs  relay_example.rs  reliable_example.rs  timesync_example.rs
sedsprintf_macros/: Cargo.toml
sedsprintf_macros/src/: lib.rs
src/: c_api.rs  config.rs  discovery.rs  lib.rs  lock.rs  macros.rs  packet.rs  python_api.rs  queue.rs  relay.rs  repr_u32.rs  router.rs  schema.rs  serialize.rs  small_payload.rs  telemetry_packet.rs  tests.rs  timesync.rs
tests/: test_telemetry_config_editor.py
tests/c-system-test/: c-system-test.rs  c_system_test.rs
tests/rust-system-test/: compression_memory_pool_test.rs  full_system_test.rs  reliable_drop_test.rs  rust-system-test.rs  rust_system_test.rs  single_threaded_test.rs  timesync_system_test.rs
