[package]
name = "sedsprintf_rs_2026"
version = "2.0.0"
edition = "2024"
build = "build.rs"
authors = ["Rylan Meilutis <rylan@rylanswebsite.com>"]
description = "A memory safe, no_std-capable telemetry library in Rust with Python and C bindings for use in building a telemetry network stack."
license = "GPL-2"
repository = "github.com/rylanmeilutis/sedsprintf_rs"
keywords = ["sprintf", "no_std", "embedded", "python", "pyo3"]
categories = ["embedded", "no-std"]
readme = "README.md"

[lib]
crate-type = ["rlib", "staticlib"]

[features]
default = ["std", "compression"]
std = []
embedded = ["spin", "compression"]
python = ["std", "pyo3/extension-module", "compression"]
compression = []

[package.metadata.maturin]
bindings = "pyo3"

[[test]]
name = "rust-system-test"
path = "tests/rust-system-test/rust-system-test.rs"
required-features = ["std"]

[[test]]
name = "rust_single_threaded_test"
path = "tests/rust-system-test/single_threaded_test.rs"
required-features = ["std"]

[[test]]
name = "c-system-test"
path = "tests/c-system-test/c-system-test.rs"
required-features = ["std"]

[dependencies]
sedsprintf_macros = { path = "sedsprintf_macros" }
strum_macros = { version = "0.27", default-features = false }
strum = { version = "0.27", default-features = false }

# Optional dependencies enabled by features
spin = { version = "0.10", optional = true }
pyo3 = { version = "0.27", optional = true, features = ["auto-initialize", "extension-module", "multiple-pymethods"] }
miniz_oxide = { version = "0.8", default-features = false, features = ["with-alloc"] }

[build-dependencies]
cbindgen = "0.29"
regex = "1.12"

# Release profile for standard builds, performance optimized
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = "symbols"
debug = 0
incremental = false
overflow-checks = false

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
strip = "symbols"
debug = 0
incremental = false
overflow-checks = false

# Release profile for embedded builds, size optimized
[profile.release-embedded]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = 0
incremental = false
overflow-checks = false

[profile.release-embedded.package."*"]
opt-level = "z"
debug = 0
strip = "symbols"
codegen-units = 1
incremental = false
overflow-checks = false