[package]
name = "sedsprintf_rs"
version = "3.4.2"
edition = "2024"
build = "build.rs"
authors = ["Rylan Meilutis <rylan@rylanswebsite.com>"]
description = "A memory safe, no_std-capable telemetry library in Rust with Python and C bindings for use in building a telemetry network stack."
license = "GPL-2"
repository = "github.com/rylanmeilutis/sedsprintf_rs"
keywords = ["sprintf", "no_std", "embedded", "python", "pyo3"]
categories = ["embedded", "no-std"]
readme = "README.md"

[lib]
crate-type = ["rlib", "staticlib"]

[features]
default = ["std", "compression", "timesync", "discovery"]
std = []
embedded = ["compression", "timesync", "discovery"]
python = ["std", "pyo3/extension-module", "compression", "timesync", "discovery"]
compression = ["zstd-safe"]
timesync = []
discovery = []

[package.metadata.maturin]
bindings = "pyo3"

[[test]]
name = "rust-system-test"
path = "tests/rust-system-test/rust_system_test.rs"
required-features = ["std", "compression", "timesync"]

[[test]]
name = "full_system_test"
path = "tests/rust-system-test/full_system_test.rs"
required-features = ["std", "compression", "timesync"]

[[test]]
name = "rust_single_threaded_test"
path = "tests/rust-system-test/single_threaded_test.rs"
required-features = ["std", "compression", "timesync"]

[[test]]
name = "reliable_drop_test"
path = "tests/rust-system-test/reliable_drop_test.rs"
required-features = ["std", "compression", "timesync"]

[[test]]
name = "c-system-test"
path = "tests/c-system-test/c_system_test.rs"
required-features = ["std", "compression", "timesync"]

[[test]]
name = "timesync_system_test"
path = "tests/rust-system-test/timesync_system_test.rs"
required-features = ["std", "compression", "timesync"]

[[test]]
name = "compression_memory_pool_test"
path = "tests/rust-system-test/compression_memory_pool_test.rs"
required-features = ["std", "compression", "timesync"]

[[bench]]
name = "packet_paths"
harness = false

[[bench]]
name = "router_system_paths"
harness = false

[dependencies]
sedsprintf_macros = { path = "sedsprintf_macros" }
strum_macros = { version = "0.28.0", default-features = false }
strum = { version = "0.28.0", default-features = false }
crc32fast = { version = "1.5.0", default-features = false }

# Optional dependencies enabled by features
pyo3 = { version = "0.28.2", optional = true, features = ["auto-initialize", "extension-module", "multiple-pymethods"] }
zstd-safe = { version = "7.2.4", optional = true, default-features = false }

# Build dependencies for code generation in build.rs
[build-dependencies]
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
criterion = "0.5"

# Release profile for standard builds, performance optimized
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = "symbols"
debug = 0
incremental = false
overflow-checks = false

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
strip = "symbols"
debug = 0
incremental = false
overflow-checks = false

# Release profile for embedded builds, size optimized
[profile.release-embedded]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = 0
incremental = false
overflow-checks = false

[profile.release-embedded.package."*"]
opt-level = "z"
debug = 0
strip = "symbols"
codegen-units = 1
incremental = false
overflow-checks = false
