[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "sedsprintf_rs_2026"
version = "1.0.6"
description = "Rust telemetry and serialization library"
authors = [{ name = "Rylan Meilutis", email = "rylan.meilutis@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"


[tool.maturin]
include = [
    "python-files/sedsprintf_rs.pyi",
    "python-files/py.typed"
]
bindings = "pyo3"
features = ["python"]

compatibility = "manylinux2014"
