[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "sedsprintf_rs"
version = "3.2.2"
description = "Rust telemetry and serialization library"
authors = [{ name = "Rylan Meilutis", email = "rylan.meilutis@gmail.com" }]
readme = "README.md"
license = "GPL-2"
requires-python = ">=3.8"


[tool.maturin]
bindings = "pyo3"
features = ["python", "timesync"]
compatibility = "manylinux2014"
python-source = "python-files"
include = [
    "python-files/sedsprintf_rs/sedsprintf_rs.pyi",
]
